# toodledo-python

./: .gitignore  .travis.yml  Pipfile  README.rst  generate-credentials.py  pylintrc  pyproject.toml  sandbox-credentials.json  setup.py
tests/: __init__.py  conftest.py  known_state.xml  known_tasks.xml  test_authorization.py  test_contexts.py  test_floating_date_and_time.py  test_folders.py  test_read.py  test_read_and_write.py  tests.py
toodledo/: __init__.py  account.py  authorization.py  context.py  custom_fields.py  errors.py  folder.py  storage.py  task.py  toodledo.py  transport.py  types.py
